fixed dream project text overflow

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -106,6 +106,7 @@
   max-width: 94%;
   z-index: 2;
   overflow: hidden;
+  height: 500px;
 }
 @media (min-width: 580px) {
   #timeline .demo-card {
